force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Number__c</fullName>
    <formula>SBQQ__Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account Number</label>
    <type>Text</type>
</CustomField>