force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <label>EditLinesFieldSetName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KCPQ_Line_Editor_2</fullName>
            </value>
            <value>
                <fullName>KCPQ_Line_Editor_3</fullName>
            </value>
            <value>
                <fullName>KCPQ_Line_Editor_4</fullName>
            </value>
            <value>
                <fullName>KCPQ_Container_1</fullName>
                <label>Container 1</label>
            </value>
            <value>
                <fullName>KCPQ_Container_2</fullName>
                <label>Container 2</label>
            </value>
            <value>
                <fullName>KCPQ_Container_3</fullName>
                <label>Container 3</label>
            </value>
            <value>
                <fullName>KCPQ_Container_4</fullName>
                <label>Container 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>