force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Duplicate_Product__c.field-meta.xml
<CustomField>
    <fullName>Has_Duplicate_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Duplicate Product</label>
    <type>Checkbox</type>
</CustomField>