force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Average_Freight__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Average_Freight__c</fullName>
    <formula>KCPQ_Freight_Total__c / SBQQ__LineItemCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Freight %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>