force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_class_3id__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_class_3id__c</fullName>
    <label>class_3id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>