force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Completed__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>