force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>