force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Customer_Channel__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Customer_Channel__c</fullName>
    <formula>SBQQ__Account__r.KCPQ_Channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Channel</label>
    <type>Text</type>
</CustomField>