force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Customer_Ship_To_ID__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Customer_Ship_To_ID__c</fullName>
    <formula>KCPQ_Ship_To__r.KCPQ_Ship_To_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Ship To ID</label>
    <type>Text</type>
</CustomField>