force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Deleted__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>