force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Division_Id__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Division_Id__c</fullName>
    <label>Division Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>