force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Freight_Total__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Freight_Total__c</fullName>
    <label>Freight Total %</label>
    <summarizedField>SBQQ__QuoteLine__c.KCPQ_Freight__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>