force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Gross_Margin__c</fullName>
    <formula>(SBQQ__ListAmount__c - KCPQ_Total_Cost__c )/ SBQQ__ListAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>