force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Job_Project_Builder_Name__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Job_Project_Builder_Name__c</fullName>
    <label>Job/Project/Builder Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>