force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Legacy_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Legacy_Quote_Number__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Quote Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>