force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Master_Builder_Id__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Master_Builder_Id__c</fullName>
    <label>Master Builder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>