force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Net_Margin__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Net_Margin__c</fullName>
    <formula>( SBQQ__NetAmount__c - KCPQ_Total_Cost__c )/ SBQQ__NetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>