force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Quote_Price__c</fullName>
    <label>Quote Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>