force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STOCK</fullName>
            </value>
            <value>
                <fullName>BUILDER</fullName>
            </value>
            <value>
                <fullName>CNT</fullName>
            </value>
            <value>
                <fullName>HOSP</fullName>
            </value>
            <value>
                <fullName>JOB</fullName>
            </value>
            <value>
                <fullName>NCB</fullName>
            </value>
            <value>
                <fullName>RLM</fullName>
            </value>
            <value>
                <fullName>TLI</fullName>
            </value>
            <value>
                <fullName>REPLENISHMENT</fullName>
            </value>
            <value>
                <fullName>PROMOTION</fullName>
            </value>
            <value>
                <fullName>CONSOLIDATED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>