force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Reference_ID__c</fullName>
    <externalId>true</externalId>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>