force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Registered_Job__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Registered_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when the job has been registered</description>
    <inlineHelpText>Check this box when the job has been registered</inlineHelpText>
    <label>Registered Job</label>
    <type>Checkbox</type>
</CustomField>