force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Release_To_ERP__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Release_To_ERP__c</fullName>
    <label>Release To ERP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>