force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Sales_Rep_Id__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Sales_Rep_Id__c</fullName>
    <formula>KCPQ_Ship_To__r.KCPQ_SalesrepId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Id</label>
    <type>Text</type>
</CustomField>