force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>KCPQ_Ship_To__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>