force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>