force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Submitted_User__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Submitted_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>