force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Total_Cost__c</fullName>
    <label>Total Quote Cost</label>
    <summarizedField>SBQQ__QuoteLine__c.KCPQ_Total_Cost__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>