force-app/main/default/objects/SBQQ__Quote__c/fields/KCPQ_Zone__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Zone__c</fullName>
    <formula>TEXT(SBQQ__Account__r.KCPQ_Zone_Pricing__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>