force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Line_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Unique_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Quote Line Unique Identifier</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>