force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Type__c</fullName>
    <description>Indicates the type of quote.</description>
    <inlineHelpText>Indicates the type of quote.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STOCK</fullName>
            </value>
            <value>
                <fullName>BUILDER</fullName>
            </value>
            <value>
                <fullName>CNT</fullName>
            </value>
            <value>
                <fullName>HOSP</fullName>
            </value>
            <value>
                <fullName>JOB</fullName>
            </value>
            <value>
                <fullName>NCB</fullName>
            </value>
            <value>
                <fullName>RLM</fullName>
            </value>
            <value>
                <fullName>TLI</fullName>
            </value>
            <value>
                <fullName>REPLENISHMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>