force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Zone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Zone_Amount__c</fullName>
    <description>Total  Zone Amount on a Quote</description>
    <label>Total Zone Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.KCPQ_Extended_Zone_Price__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>