force-app/main/default/objects/SBQQ__Quote__c/listViews/Quote_Appovers_50K_75K_Quote.listView-meta.xml
<ListView>
    <fullName>Quote_Appovers_50K_75K_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Quote Appovers &gt;=50K &lt;75K</label>
    <queue>Quote_Appovers_50K_75K</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>