force-app/main/default/objects/SBQQ__Quote__c/listViews/Quote_Approvers_75K_Quote.listView-meta.xml
<ListView>
    <fullName>Quote_Approvers_75K_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Quote Approvers &gt;=75K</label>
    <queue>Quote_Approvers_75K</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>